# IndianConstitution

./: .coverage  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Getting_Started_with_IndianConstitution.ipynb  LICENSE  MANIFEST.in  PUBLISH.md  README (1).md  README.md  SECURITY.md  __init__.py  changelog.md  cli.py  coverage.xml  examples.py  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py  setup_scaffold.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codacy.yml  codeql.yml  deploy-docs.yml  docs.yml  python-package.yml  release.yml  scorecard.yml
Iconlib/: README.md  __init__.py  setup.py
api/: index.html
cli/: index.html
contributing/: index.html
docs/: api.md  cli.md  contributing.md  examples.md  faq.md  getting-started.md  index.md  search.md  semantic-search.md
docs/api/: cli.md  core.md
examples/: Getting_Started_with_IndianConstitution.ipynb  basic_usage.py  cli_demo.py  index.html  json_export.py  pandas_export.py  search.py  semantic_search.py
faq/: index.html
getting-started/: index.html
indianconstitution/: Readme.md  constitution_of_india.json  main (1).py
search/: index.html  search_index.json
semantic-search/: index.html
src/indianconstitution/: __init__.py
src/indianconstitution/cli/: main.py  rich_utils.py
src/indianconstitution/core/: engine.py  graph.py  legacy.py  models.py
src/indianconstitution/data/: constitution.json
src/indianconstitution/export/: engine.py
src/indianconstitution/search/: engine.py
src/indianconstitution/utils/: caching.py
tests/: test_core.py  test_export.py  test_graph.py
workflows/: publish.yml
